--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "motion": "^12.12.1",
     "next": "15.3.1",
     "next-themes": "0.4.6",
+    "openai": "^5.0.1",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
