--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "11.13.1",
+    "googleapis": "^149.0.0",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
