--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroui/system": "2.4.15",
     "@heroui/theme": "2.4.15",
     "@hookform/resolvers": "^5.0.1",
+    "@next/third-parties": "^15.3.3",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
